src/themes/global/sensible-defaults.scss
body {
  min-height: 100vh !important;
}
/* Navigation Bar */
.logo {
  content: $logo;
  min-height: 3rem;
}
.navbar {
a.dropdown-item {
  width: auto;
}
.navbar-burger {
  height: 4.25rem;
  width: 4.25rem;
}
}
.content.topic-title {
  margin-bottom: 0px;
}
// Dropdown Category
a.dropdown-item {
width: auto;
}
// Topic List Card Overflow
.topic-list {
.box {
  .media-left {
    margin-right: 0px;
  }
  .media-content {
    overflow: hidden;
  }
  nav.level.is-tablet {
    padding-bottom: 0px;
  }
  .mini-avatar img {
    padding-top:2px;
  }
  .post-stats span {
    font-size: 0.8rem;
    margin-right: 2px;
    margin-left: 2px;
  }
  .dropdown {
    display:none;
  }
  span.upvote-value {
    margin-right: 8px;
  }
  padding: 0.6rem 0 0.1rem 0.3rem;
}
@media screen and (max-width: 768px) {
  .content {
    text-align: center;
}
  .box {
    .post-stats span{
      text-align: center;
    }
    padding: 2rem;
  }
}
}
.media-content {
  overflow-x:hidden;
}

// VP and RC indicator
.progress-table td {
  vertical-align: middle;
}
.progress {
  -moz-appearance: none;
  -webkit-appearance: none;
  border: none;
  border-radius: 3.5em;
  display: block;
  height:0.7em;
  overflow: hidden;
  padding: 0;
  width: 10em;
}

.progress-label {
margin: 0 0.4vw;
}

.steem-icon {
  vertical-align: top;
  margin-left: 0.5em;
  height:1.3em;
}

.token-icon {  
  vertical-align: middle;
  margin-left: 0.5em;
  height:1.2em;
}

// Upvote Button Size
.mdi-36px.mdi-set, .mdi-36px.mdi:before {
  font-size: 24px;
}
/* Disabled Upvote Button */
.mdi-36px.mdi-set, .mdi-36px.is-disabled {
  opacity: 0.2;
}
.post {
  .box {
    margin-bottom: 0px;
    margin-top: 1.5vh;
  }
  .upvote-control {
  top: 4px;
    position: relative;
  }
  .upvote-control span {
    padding-right: 0.5rem;
  }
  .content {
    padding-bottom: 20px;
  }
  @media screen and (max-width: 768px) {
    .quote-this {
      text-align: center;
    }
  }
}
// MOBILE - Header
@media screen and (max-width: 768px) {
  .navbar .navbar-item {
    text-align: right;
  }
}
.upvote-drop-control {
  .dropdown-content {
    width:230px;
    padding-right: 20px;
    margin: 0px;
    visibility: visible;
    opacity: 1;
    -webkit-transform: translateX(0%);
    transform: translateX(0%);
    position: absolute;
    top: -15px;
    left: -48px;
}
  .dropdown-item:focus {
  outline: none !important;
}
  .percent-label {
    width: 40px;
}
  .upvote-dropdownbutton {
    padding-left: 10px;
  }
  .popup-upvote {
    display:flex;
  }
}
.quote-this,.edit-this {
  padding: 0px 3px 5px 3px;
}
.save {
  margin-right: 1rem;
}
.card-header {
  margin-top: 20px;
}
.card-header-title {
  font-size: 1rem;
}
.table {
  overflow: hidden;
}
.cat-stats {
  font-size: .8rem;
}
.columns.is-tablet.cat-list {
  overflow: hidden;
}
.card-cat .card-content {
  padding:0px;
}
.b-table .table {
  padding: 15px 10px;
}
.columns.cat-style {
  margin: 2px 2px 2px 2px;
  padding:0px;
}
.pagination {
  margin-top: 25px;
}
a.pagination-link.is-current {
  font-size: 0.9rem;
}
.nav-control {
    margin:20px 0px 0px 0;
  }
.cat-stats {
  padding-top: 20px;
}
@media screen and (max-width: 768px) {
  .column.is-half.cat-title {
    text-align: center;
  }
}
.footer-main {
  padding: 2rem 0;
}

.category-activity .b-tooltip .avatar.is-16x16 {
  top: 4px;
  left: -20px;
}

.topic-activity .b-tooltip .avatar.is-16x16 {
  top: 2px;
  left: 2px;
}

